...
  });
}

const List<City> worldCities = [
  City(name: 'Accra', country: 'Ghana', timezoneId: 'Africa/Accra'),
  City(name: 'Casablanca', country: 'Morocco', timezoneId: 'Africa/Casablanca'),
  City(name: 'Kolkata', country: 'India', timezoneId: 'Asia/Kolkata'),
  City(name: 'Reykjavik', country: 'Iceland', timezoneId: 'Atlantic/Reykjavik'),
  City(
    name: 'Addis Ababa',
    country: 'Ethiopia',
    timezoneId: 'Africa/Addis_Ababa',
  ),
...
